Family Bundle Integration WIP
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Management/GradeBundle/Resources/config/doctrine/StudentGrade.orm.yml
+++ b/src/Busybee/Management/GradeBundle/Resources/config/doctrine/StudentGrade.orm.yml
@@ -26,6 +26,7 @@ Busybee\Management\GradeBundle\Entity\StudentGrade:
     manyToOne:
         grade:
             targetEntity: Busybee\Core\CalendarBundle\Entity\Grade
+            inversedBy: students
             joinColumns:
                 grade_id:
                     referencedColumnName: id
