Bundle Management Debug.  Setting Delete Debug
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@
 
 # Vendor Files
 /vendor/
-!vendor/composer/*.php
-!vendor/composer/*.json
-!vendor/composer/LICENSE
+!/vendor/composer/*.php
+!/vendor/composer/*.json
+!/vendor/composer/LICENSE
 
 # Parameters
 /app/config/parameters.yml
