Gibbon Import Integration
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -12,3 +12,9 @@ _errors:
 
 _main:
     resource: routing.yml
+
+gibbon:
+    resource: "@GibbonBundle/Resources/config/routing.yml"
+    prefix:   /gibbon/
+
+
