--- a/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -73,6 +73,10 @@ Busybee\People\PersonBundle\Entity\Person:
             type: string
             length: '25'
             nullable: true
+        nameInCharacters:
+            type: string
+            length: 32
+            nullable: true
     manyToOne:
         createdBy:
             targetEntity: Busybee\Core\SecurityBundle\Entity\User
