--- a/app/config/doctrine_dev.yml
+++ b/app/config/doctrine_dev.yml
@@ -1,13 +1,12 @@
 # Doctrine Configuration
 doctrine:
     dbal:
-        default_connection: default
         connections:
-            default:
+            gibbon:
                 driver:    pdo_mysql
                 host:      "%database_host%"
                 port:      "%database_port%"
-                dbname:    "%database_name%"
+                dbname:    "gibbon"
                 user:      "%database_user%"
                 password:  "%database_password%"
                 charset:   utf8mb4
@@ -24,10 +23,9 @@ doctrine:
         #   2. Uncomment database_path in parameters.yml.dist
         #   3. Uncomment next line:
         #     path:     "%database_path%"
-
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         entity_managers:
-            default:
-                connection: default
-                auto_mapping: true 
+            gibbon:
+                connection: gibbon
+                auto_mapping: false
