--- a/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -8,6 +8,7 @@ Busybee\People\PersonBundle\Entity\Person:
         person: Person
         student: Busybee\People\StudentBundle\Entity\Student
         staff: Busybee\People\StaffBundle\Entity\Staff
+        contact: Busybee\People\ContactBundle\Entity\Contact
     table: person
     repositoryClass: Busybee\People\PersonBundle\Repository\PersonRepository
     id:
